// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenuButton Matches Snapshot (defaultOpen) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 32px;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1 > svg {
  color: inherit;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c11:focus {
  outline: none;
}

.c11:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 3px #84C6EA,0 0 0 1px #006296;
}

.c11:focus:not(:focus-visible) {
  box-shadow: none;
}

.c11:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 3px #84C6EA,0 0 0 1px #006296;
}

.c16 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #84C6EA;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c16:focus {
  outline: none;
}

.c16:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 3px #84C6EA,0 0 0 1px #006296;
}

.c16:focus:not(:focus-visible) {
  box-shadow: none;
}

.c16:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 3px #84C6EA,0 0 0 1px #006296;
}

.c15 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: var(--spacing-half);
  margin-right: 0;
}

.c12 {
  color: #006296;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
}

.c12:hover {
  color: #003A5A;
}

.c12:visited {
  color: #62a;
}

.c12:visited svg {
  color: #62a;
}

.c17 {
  color: #84C6EA;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
}

.c17:visited {
  color: #62a;
}

.c17:visited svg {
  color: #62a;
}

.c14 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c13 {
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x) 0 var(--spacing-3x);
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c13:focus {
  box-shadow: inset 0 0 0 3px #84C6EA,inset 0 0 0 1px #006296;
  outline: none;
}

.c13:hover {
  background-color: #DBDEE1;
}

.c13[disabled] {
  color: #B7BBC2;
  fill: #B7BBC2;
  pointer-events: none;
}

.c6 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c6:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: "";
  display: block;
  margin: 0 var(--spacing-2x);
}

.c9 {
  line-height: 1.25rem;
  margin: auto 0;
  margin-right: var(--spacing-1x);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.875rem;
  height: 100%;
  margin: 0;
  overflow: hidden;
  padding: 0;
  padding-left: var(--spacing-half);
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c7:focus {
  box-shadow: inset 0 0 0 3px #84C6EA,inset 0 0 0 1px #006296;
  outline: none;
}

.c7:hover {
  background-color: #DBDEE1;
}

.c7[disabled],
.c7[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c10:focus {
  box-shadow: inset 0 0 0 3px #84C6EA,inset 0 0 0 1px #006296;
  outline: none;
}

.c10:hover {
  background-color: transparent;
}

.c10[disabled],
.c10[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c4 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  color: #000000;
  list-style-type: none;
  position: absolute;
  width: 100%;
}

.c0 {
  position: relative;
}

.c2 {
  background-color: #004E78;
  border-color: #004E78;
  color: #FFFFFF;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  padding: 0 var(--spacing-half);
  text-transform: unset;
}

.c2:hover {
  background-color: #004E78;
  border-color: #004E78;
}

.c3 {
  margin-left: var(--spacing-1x);
}

.c5 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

<nav
  aria-label="Menu"
  class="c0"
>
  <button
    aria-expanded="true"
    class="c1 c2"
    data-testid="menu-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="c3"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
  </button>
  <div
    class="c4 c5"
    data-testid="menu-list"
  >
    <ul
      aria-labelledby="firstGroup"
      class="c6"
    >
      <li>
        <a
          aria-disabled="false"
          class="c7"
          data-testid="listitem-optionA"
          href="/testA"
          tabindex="0"
        >
          <span
            class="c8"
          >
            <span
              class="c9"
            >
              optionA
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c7"
          data-testid="listitem-optionB"
          href="/testB"
          tabindex="0"
        >
          <span
            class="c8"
          >
            <span
              class="c9"
            >
              optionB
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c7"
          data-testid="listitem-optionC"
          href="/testC"
          tabindex="0"
        >
          <span
            class="c8"
          >
            <span
              class="c9"
            >
              optionC
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c10"
          data-testid="listitem-optionD"
          disabled=""
          href="/testD"
          tabindex="-1"
        >
          <span
            class="c8"
          >
            <span
              class="c9"
            >
              optionD
            </span>
          </span>
        </a>
      </li>
    </ul>
    <ul
      aria-labelledby="secondGroup"
      class="c6"
    >
      <li>
        <a
          aria-disabled="false"
          class="c11 c12 c13"
          href="https://external-link.com/a"
          target="_blank"
          type="external"
        >
          <span
            class="c14"
          >
            ExternalA
          </span>
          <svg
            aria-label="open in new window"
            class="c15"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c11 c12 c13"
          href="https://external-link.com/b"
          target="_blank"
          type="external"
        >
          <span
            class="c14"
          >
            ExternalB
          </span>
          <svg
            aria-label="open in new window"
            class="c15"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c11 c12 c13"
          href="https://external-link.com/c"
          target="_blank"
          type="external"
        >
          <span
            class="c14"
          >
            ExternalC
          </span>
          <svg
            aria-label="open in new window"
            class="c15"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c16 c17 c13"
          disabled=""
          target="_blank"
          type="external"
        >
          <span
            class="c14"
          >
            ExternalD
          </span>
          <svg
            aria-label="open in new window"
            class="c15"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
        </a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`DropdownMenuButton Matches Snapshot 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 32px;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1 > svg {
  color: inherit;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c11:focus {
  outline: none;
}

.c11:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 3px #84C6EA,0 0 0 1px #006296;
}

.c11:focus:not(:focus-visible) {
  box-shadow: none;
}

.c11:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 3px #84C6EA,0 0 0 1px #006296;
}

.c16 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #84C6EA;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c16:focus {
  outline: none;
}

.c16:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 3px #84C6EA,0 0 0 1px #006296;
}

.c16:focus:not(:focus-visible) {
  box-shadow: none;
}

.c16:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 3px #84C6EA,0 0 0 1px #006296;
}

.c15 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: var(--spacing-half);
  margin-right: 0;
}

.c12 {
  color: #006296;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
}

.c12:hover {
  color: #003A5A;
}

.c12:visited {
  color: #62a;
}

.c12:visited svg {
  color: #62a;
}

.c17 {
  color: #84C6EA;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
}

.c17:visited {
  color: #62a;
}

.c17:visited svg {
  color: #62a;
}

.c14 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c13 {
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x) 0 var(--spacing-3x);
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c13:focus {
  box-shadow: inset 0 0 0 3px #84C6EA,inset 0 0 0 1px #006296;
  outline: none;
}

.c13:hover {
  background-color: #DBDEE1;
}

.c13[disabled] {
  color: #B7BBC2;
  fill: #B7BBC2;
  pointer-events: none;
}

.c6 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c6:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: "";
  display: block;
  margin: 0 var(--spacing-2x);
}

.c9 {
  line-height: 1.25rem;
  margin: auto 0;
  margin-right: var(--spacing-1x);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.875rem;
  height: 100%;
  margin: 0;
  overflow: hidden;
  padding: 0;
  padding-left: var(--spacing-half);
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c7:focus {
  box-shadow: inset 0 0 0 3px #84C6EA,inset 0 0 0 1px #006296;
  outline: none;
}

.c7:hover {
  background-color: #DBDEE1;
}

.c7[disabled],
.c7[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c10:focus {
  box-shadow: inset 0 0 0 3px #84C6EA,inset 0 0 0 1px #006296;
  outline: none;
}

.c10:hover {
  background-color: transparent;
}

.c10[disabled],
.c10[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c4 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  color: #000000;
  list-style-type: none;
  position: absolute;
  width: 100%;
}

.c0 {
  position: relative;
}

.c2 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  padding: 0 var(--spacing-half);
  text-transform: unset;
}

.c2:hover {
  background-color: #004E78;
  border-color: #004E78;
}

.c3 {
  margin-left: var(--spacing-1x);
}

.c5 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

<nav
  aria-label="Menu"
  class="c0"
>
  <button
    aria-expanded="false"
    class="c1 c2"
    data-testid="menu-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="c3"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
  </button>
  <div
    class="c4 c5"
    data-testid="menu-list"
    hidden=""
  >
    <ul
      aria-labelledby="firstGroup"
      class="c6"
    >
      <li>
        <a
          aria-disabled="false"
          class="c7"
          data-testid="listitem-optionA"
          href="/testA"
          tabindex="0"
        >
          <span
            class="c8"
          >
            <span
              class="c9"
            >
              optionA
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c7"
          data-testid="listitem-optionB"
          href="/testB"
          tabindex="0"
        >
          <span
            class="c8"
          >
            <span
              class="c9"
            >
              optionB
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c7"
          data-testid="listitem-optionC"
          href="/testC"
          tabindex="0"
        >
          <span
            class="c8"
          >
            <span
              class="c9"
            >
              optionC
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c10"
          data-testid="listitem-optionD"
          disabled=""
          href="/testD"
          tabindex="-1"
        >
          <span
            class="c8"
          >
            <span
              class="c9"
            >
              optionD
            </span>
          </span>
        </a>
      </li>
    </ul>
    <ul
      aria-labelledby="secondGroup"
      class="c6"
    >
      <li>
        <a
          aria-disabled="false"
          class="c11 c12 c13"
          href="https://external-link.com/a"
          target="_blank"
          type="external"
        >
          <span
            class="c14"
          >
            ExternalA
          </span>
          <svg
            aria-label="open in new window"
            class="c15"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c11 c12 c13"
          href="https://external-link.com/b"
          target="_blank"
          type="external"
        >
          <span
            class="c14"
          >
            ExternalB
          </span>
          <svg
            aria-label="open in new window"
            class="c15"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c11 c12 c13"
          href="https://external-link.com/c"
          target="_blank"
          type="external"
        >
          <span
            class="c14"
          >
            ExternalC
          </span>
          <svg
            aria-label="open in new window"
            class="c15"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c16 c17 c13"
          disabled=""
          target="_blank"
          type="external"
        >
          <span
            class="c14"
          >
            ExternalD
          </span>
          <svg
            aria-label="open in new window"
            class="c15"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
        </a>
      </li>
    </ul>
  </div>
</nav>
`;
